# advent-of-code-2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
days/: day1.cpp  day2.cpp
source/: day2.cpp  day3.cpp  day4.cpp  day5.cpp
source/utils/: filereader.cpp  range.cpp
src/: day1.cpp  day10-z3.cpp  day10.cpp  day11.cpp  day12.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day8Kruskal.cpp  day9-compress.cpp  day9.cpp
src/utils/: disjointsetunion.cpp  filereader.cpp  grid.cpp  gridify.cpp  machine.cpp  matrix.cpp  position.cpp  printer.cpp  range.cpp  stringutils.cpp
